third_party/move/move-compiler-v2/tests/checking/variants/variants_check_wrongly_named_variant_err.exp

Diagnostics:
error: invalid name
  ┌─ tests/checking/variants/variants_check_wrongly_named_variant_err.move:4:9
  │
4 │         rgb{red: u64, green: u64, blue: u64},
  │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid variant name 'rgb'. variant names must start with 'A'..'Z'
