third_party/move/move-compiler-v2/tests/checking/variants/variants_check_wrongly_named_variant_err.move
module 0x815::m {

    enum ColorDuplicateVariant {
        rgb{red: u64, green: u64, blue: u64},
        Red,
        Blue,
    }
}
